--- a/TaskManager/Views/_ViewImports.cshtml
+++ b/TaskManager/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TaskManager
-@using TaskManager.Models
+﻿@using TaskManagerUI
+@using TaskManagerUI.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
