--- a/TaskManager/Views/Shared/Anonymized/_Layout.cshtml
+++ b/TaskManager/Views/Shared/Anonymized/_Layout.cshtml
@@ -40,7 +40,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="text_footer">
             &copy; 2023 - TaskManagerUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
