--- a/TaskManager/Views/Authorization/Authorization.cshtml
+++ b/TaskManager/Views/Authorization/Authorization.cshtml
@@ -37,7 +37,7 @@
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
-			<button  asp-controller="Autorization" asp-action="Index">>Sign In</button>
+			<button asp-controller="Authorization" asp-action="Login">Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
@@ -50,7 +50,7 @@
 			<div class="overlay-panel overlay-right">
 				<h1>Hello, Friend!</h1>
 				<p>Enter your personal details and start journey with us</p>
-				<button class="ghost" id="signUp">Sign Up</button>
+				<button class="ghost" id="signUp" asp-controller="Authorization" asp-action="Registrate">Sign Up</button>
 			</div>
 		</div>
 	</div>
