--- a/TaskManager/Views/Authorization/Authorization.cshtml
+++ b/TaskManager/Views/Authorization/Authorization.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
 	ViewData["Title"] = "Log In";
 }
+@model RegistarateModel
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,14 +21,14 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your email for registration</span>
-			<input type="text" placeholder="Name" />
+				<input type="text" placeholder="Name" />
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<button>Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="#">
+		<form method="post" action="/Authorization/Login">
 			<h1>Sign in</h1>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
@@ -34,10 +36,10 @@
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your account</span>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="email" name="Email" placeholder="Email" />
+			<input type="password" name="Password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
-			<button asp-controller="Authorization" asp-action="Login">Sign In</button>
+			<button type="submit">Sign In</button>
 		</form>
 	</div>
 	<div class="overlay-container">
