--- a/TaskManager/Views/Authorization/Authorization.cshtml
+++ b/TaskManager/Views/Authorization/Authorization.cshtml
@@ -28,14 +28,16 @@
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form method="post" action="/Authorization/Login">
+		<form method="post" action="/Authorization/Authorization">
 			<h1>Sign in</h1>
+			<span class="error-message">@ViewBag.ErrorMessage</span>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your account</span>
+			
 			<input type="email" name="Email" placeholder="Email" />
 			<input type="password" name="Password" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
@@ -52,7 +54,7 @@
 			<div class="overlay-panel overlay-right">
 				<h1>Hello, Friend!</h1>
 				<p>Enter your personal details and start journey with us</p>
-				<button class="ghost" id="signUp" asp-controller="Authorization" asp-action="Registrate">Sign Up</button>
+				<button class="ghost" id="signUp">Sign Up</button>
 			</div>
 		</div>
 	</div>
