--- a/TaskManager/Views/Authorization/Authorization.cshtml
+++ b/TaskManager/Views/Authorization/Authorization.cshtml
@@ -13,24 +13,25 @@
 <body>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form method="post" action="/Authorization/Registration">
 			<h1>Create Account</h1>
+			<span class="error-message" id="errorRegistration">@TempData["ErrorRegistration"]</span>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
 				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
 			</div>
 			<span>or use your email for registration</span>
-				<input type="text" placeholder="Name" />
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="text" name="Name" placeholder="Name" />
+			<input type="email" name="Email" placeholder="Email" />
+			<input type="password" name="Password" placeholder="Password" />
 			<button>Sign Up</button>
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form method="post" action="/Authorization/Authorization">
+		<form method="post" action="/Authorization/Login">
 			<h1>Sign in</h1>
-			<span class="error-message">@ViewBag.ErrorMessage</span>
+			<span class="error-message">@TempData["ErrorLogin"]</span>
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
