--- a/TaskManager/wwwroot/css/footer.css
+++ b/TaskManager/wwwroot/css/footer.css
@@ -1,6 +1,6 @@
 footer {
-    background-color: white;
-    color: #fff;
+    background-color: #262626;
+    color: #ffffff;
     font-size: 14px;
     bottom: 0;
     position: fixed;
