--- a/TaskManager/Views/Authorization/Authorization.cshtml
+++ b/TaskManager/Views/Authorization/Authorization.cshtml
@@ -11,51 +11,53 @@
 	<link href="~/authorization/authorization.css" rel="stylesheet" />
 </head>
 <body>
-<div class="container" id="container">
-	<div class="form-container sign-up-container">
-		<form method="post" action="/Authorization/Registration">
-			<h1>Create Account</h1>
-			<span class="error-message" id="errorRegistration">@TempData["ErrorRegistration"]</span>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-			<span>or use your email for registration</span>
-			<input type="text" name="Name" placeholder="Name" />
-			<input type="email" name="Email" placeholder="Email" />
-			<input type="password" name="Password" placeholder="Password" />
-			<button>Sign Up</button>
-		</form>
-	</div>
-	<div class="form-container sign-in-container">
-		<form method="post" action="/Authorization/Login">
-			<h1>Sign in</h1>
-			<span class="error-message">@TempData["ErrorLogin"]</span>
-			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
-			</div>
-			<span>or use your account</span>
-			
-			<input type="email" name="Email" placeholder="Email" />
-			<input type="password" name="Password" placeholder="Password" />
-			<a href="#">Forgot your password?</a>
-			<button type="submit">Sign In</button>
-		</form>
-	</div>
-	<div class="overlay-container">
-		<div class="overlay">
-			<div class="overlay-panel overlay-left">
-				<h1>Welcome Back!</h1>
-				<p>To keep connected with us please login with your personal info</p>
-				<button class="ghost" id="signIn">Sign In</button>
-			</div>
-			<div class="overlay-panel overlay-right">
-				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
-				<button class="ghost" id="signUp">Sign Up</button>
+<div class="login" id="login">
+	<div class="container" id="container">
+		<div class="form-container sign-up-container">
+			<form method="post" action="/Authorization/Registration">
+				<h1>Create Account</h1>
+				<span class="error-message" id="errorRegistration">@TempData["ErrorRegistration"]</span>
+				<div class="social-container">
+					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				</div>
+				<span>or use your email for registration</span>
+				<input type="text" name="Name" placeholder="Name" />
+				<input type="email" name="Email" placeholder="Email" />
+				<input type="password" name="Password" placeholder="Password" />
+				<button>Sign Up</button>
+			</form>
+		</div>
+		<div class="form-container sign-in-container">
+			<form method="post" action="/Authorization/Login">
+				<h1>Sign in</h1>
+				<span class="error-message">@TempData["ErrorLogin"]</span>
+				<div class="social-container">
+					<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
+					<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
+					<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				</div>
+				<span>or use your account</span>
+
+				<input type="email" name="Email" placeholder="Email" />
+				<input type="password" name="Password" placeholder="Password" />
+				<a href="#">Forgot your password?</a>
+				<button type="submit">Sign In</button>
+			</form>
+		</div>
+		<div class="overlay-container">
+			<div class="overlay">
+				<div class="overlay-panel overlay-left">
+					<h1>Welcome Back!</h1>
+					<p>To keep connected with us please login with your personal info</p>
+					<button class="ghost" id="signIn">Sign In</button>
+				</div>
+				<div class="overlay-panel overlay-right">
+					<h1>Hello, Friend!</h1>
+					<p>Enter your personal details and start journey with us</p>
+					<button class="ghost" id="signUp">Sign Up</button>
+				</div>
 			</div>
 		</div>
 	</div>
