--- a/TaskManager/Views/Shared/Anonymized/_Layout.cshtml
+++ b/TaskManager/Views/Shared/Anonymized/_Layout.cshtml
@@ -12,28 +12,33 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TaskManagerUI</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+        <section class="navigation">
+            <div class="nav-container">
+                <div class="brand">
+                    <a asp-controller="Home" asp-action="Index">TaskManagerUI </a>
+                </div>
+                <nav>
+                    <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+                    <ul class="nav-list">
+                        <li>
+                            <a asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Authorization" asp-action="Authorization">Log In</a>
+                        <li>
+                            <a asp-controller="" asp-action="">About</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <li>
+                            <a asp-controller="Home" asp-action="Index">Services</a>
+                        </li>
+                        <li>
+                            <a asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li>
+                            <a asp-controller="Authorization" asp-action="Authorization">         Log in</a>
                         </li>
                     </ul>
-                </div>
+                </nav>
             </div>
-        </nav>
+        </section>
     </header>
     <div class="container">
         <main role="main" class="pb">
