--- a/TaskManager/wwwroot/authorization/authorization.css
+++ b/TaskManager/wwwroot/authorization/authorization.css
@@ -5,8 +5,7 @@
     box-sizing: border-box;
 }
 
-body {
-    background: #f6f5f7;
+.login {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,18 +13,20 @@ body {
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
     margin: -20px 0 50px;
+    margin-top:  100px;
+    max-height: 480px;
 }
 
-h1 {
+.login h1 {
     font-weight: bold;
     margin: 0;
 }
 
-h2 {
+.login h2 {
     text-align: center;
 }
 
-p {
+.login p {
     font-size: 14px;
     font-weight: 100;
     line-height: 20px;
@@ -33,18 +34,18 @@ p {
     margin: 20px 0 30px;
 }
 
-span {
+.login span {
     font-size: 12px;
 }
 
-a {
+.login a {
     color: #333;
     font-size: 14px;
     text-decoration: none;
     margin: 15px 0;
 }
 
-button {
+.login button {
     border-radius: 20px;
     border: 1px solid #FF4B2B;
     background-color: #FF4B2B;
@@ -57,20 +58,20 @@ button {
     transition: transform 80ms ease-in;
 }
 
-    button:active {
+    .login button:active {
         transform: scale(0.95);
     }
 
-    button:focus {
+    .login button:focus {
         outline: none;
     }
 
-    button.ghost {
+    .login button.ghost {
         background-color: transparent;
         border-color: #FFFFFF;
     }
 
-form {
+.login form {
     background-color: #FFFFFF;
     display: flex;
     align-items: center;
@@ -81,7 +82,7 @@ form {
     text-align: center;
 }
 
-input {
+.login input {
     background-color: #eee;
     border: none;
     padding: 12px 15px;
@@ -89,47 +90,47 @@ input {
     width: 100%;
 }
 
-.container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-    position: relative;
-    overflow: hidden;
-    width: 768px;
-    max-width: 100%;
-    min-height: 480px;
-}
+    .login .container {
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+        position: relative;
+        overflow: hidden;
+        width: 768px;
+        max-width: 100%;
+        min-height: 480px;
+    }
 
-.form-container {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all 0.6s ease-in-out;
-}
+    .login .form-container {
+        position: absolute;
+        top: 0;
+        height: 100%;
+        transition: all 0.6s ease-in-out;
+    }
 
-.sign-in-container {
-    left: 0;
-    width: 50%;
-    z-index: 2;
-}
+    .login .sign-in-container {
+        left: 0;
+        width: 50%;
+        z-index: 2;
+    }
 
-.container.right-panel-active .sign-in-container {
-    transform: translateX(100%);
-}
+    .login .container.right-panel-active .sign-in-container {
+        transform: translateX(100%);
+    }
 
-.sign-up-container {
-    left: 0;
-    width: 50%;
-    opacity: 0;
-    z-index: 1;
-}
+    .login .sign-up-container {
+        left: 0;
+        width: 50%;
+        opacity: 0;
+        z-index: 1;
+    }
 
-.container.right-panel-active .sign-up-container {
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-    animation: show 0.6s;
-}
+    .login .container.right-panel-active .sign-up-container {
+        transform: translateX(100%);
+        opacity: 1;
+        z-index: 5;
+        animation: show 0.6s;
+    }
 
 @keyframes show {
     0%, 49.99% {
@@ -143,7 +144,7 @@ input {
     }
 }
 
-.overlay-container {
+.login .overlay-container {
     position: absolute;
     top: 0;
     left: 50%;
@@ -154,11 +155,11 @@ input {
     z-index: 100;
 }
 
-.container.right-panel-active .overlay-container {
+.login .container.right-panel-active .overlay-container {
     transform: translateX(-100%);
 }
 
-.overlay {
+.login .overlay {
     background: #FF416C;
     background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
     background: linear-gradient(to right, #FF4B2B, #FF416C);
@@ -174,11 +175,11 @@ input {
     transition: transform 0.6s ease-in-out;
 }
 
-.container.right-panel-active .overlay {
+.login .container.right-panel-active .overlay {
     transform: translateX(50%);
 }
 
-.overlay-panel {
+.login .overlay-panel {
     position: absolute;
     display: flex;
     align-items: center;
@@ -193,28 +194,28 @@ input {
     transition: transform 0.6s ease-in-out;
 }
 
-.overlay-left {
+.login .overlay-left {
     transform: translateX(-20%);
 }
 
-.container.right-panel-active .overlay-left {
+.login .container.right-panel-active .overlay-left {
     transform: translateX(0);
 }
 
-.overlay-right {
+.login .overlay-right {
     right: 0;
     transform: translateX(0);
 }
 
-.container.right-panel-active .overlay-right {
+.login .container.right-panel-active .overlay-right {
     transform: translateX(20%);
 }
 
-.social-container {
+.login .social-container {
     margin: 20px 0;
 }
 
-    .social-container a {
+    .login .social-container a {
         border: 1px solid #DDDDDD;
         border-radius: 50%;
         display: inline-flex;
@@ -225,7 +226,7 @@ input {
         width: 40px;
     }
 
-.error-message {
+.login .error-message {
     display: block;
     font-size: 14px;
     color: red;
