--- a/TaskManager/Views/Shared/Authorizated/_Layout.cshtml
+++ b/TaskManager/Views/Shared/Authorizated/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewData["Title"] - TaskManagerUI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/authorizated/navbar.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/common.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/footer.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/TaskManagerUI.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
